Adds last file path loaded from settings.

--- a/frankenscan/model/settings/settings.json
+++ b/frankenscan/model/settings/settings.json
@@ -19,5 +19,10 @@
     "spacing": 10,
     "itemWidth": 150,
     "itemHeight": 70
+  },
+  "LastFilePath":
+  {
+    "useLastFilePath": false,
+    "lastFilePath": "C:/Users/Robert/IdeaProjects/frankenscan/data"
   }
 }
