--- a/frankenscan/model/settings/settings.json
+++ b/frankenscan/model/settings/settings.json
@@ -11,18 +11,38 @@
   "Controls":
   {
     "itemWidth": 150,
-    "itemHeight": 70
+    "itemHeight": 70,
+    "tabs": ["Run", "File", "Edit"],
+    "buttons": [{"Name":"Run", "Icon":"metronome--arrow.png", "Category": "Run", "Program":"myRun"},
+      {"Name":"Pause", "Icon":"control-pause.png", "Category": "Run", "Program":"myPause"},
+      {"Name":"Reset", "Icon":"arrow-circle-135.png", "Category": "Run", "Program":"myReset"}
+    ]
   },
   "Modules":
   {
-    "iconListWidth": 1000,
+    "iconListWidth": 1600,
     "spacing": 10,
     "itemWidth": 150,
-    "itemHeight": 70
+    "itemHeight": 70,
+    "tabs": ["File", "View", "Machine Learning"],
+    "modules": [{"Name":"Select_nii_Files", "Icon":"script--plus.png", "Category": "File"},
+  {"Name":"Select_Image_Files", "Icon":"script--plus.png", "Category": "File"},
+  {"Name":"Read_nii_Files", "Icon":"scanner--arrow.png", "Category": "File"},
+  {"Name":"Read_Image_Files", "Icon":"scanner--arrow.png", "Category": "File"},
+  {"Name":"Rescale_Image_Files", "Icon":"scanner--arrow.png", "Category": "File"},
+  {"Name":"View_Header", "Icon":"receipt-sticky-note.png", "Category": "View"},
+  {"Name":"View_Image", "Icon":"receipt-sticky-note.png", "Category": "View"},
+  {"Name":"View_Numpy_Array", "Icon":"slide-resize-actual.png", "Category": "View"},
+  {"Name":"Normalise_Image_Files", "Icon":"scanner--arrow.png", "Category": "File"}
+    ]
+
   },
   "LastFilePath":
   {
     "useLastFilePath": false,
     "lastFilePath": "C:/Users/Robert/IdeaProjects/frankenscan/data"
   }
+
+
+
 }
