--- a/frankenscan/model/settings/settings.json
+++ b/frankenscan/model/settings/settings.json
@@ -35,7 +35,9 @@
   {"Name":"View_Numpy_Array", "Icon":"slide-resize-actual.png", "Category": "View"},
   {"Name":"Normalise_Image_Files", "Icon":"scanner--arrow.png", "Category": "File"},
       {"Name":"Data_Loader", "Icon":"scanner--arrow.png", "Category": "Machine Learning"},
-      {"Name":"View_Data_Loader", "Icon":"scanner--arrow.png", "Category": "View"}
+      {"Name":"View_Data_Loader", "Icon":"scanner--arrow.png", "Category": "View"},
+      {"Name":"Dummy_Data_Loader", "Icon":"scanner--arrow.png", "Category": "Machine Learning"}
+
     ]
 
   },
